# Goiaba254225

./: .gitignore  Procfile  manage.py  package-lock.json  package.json  pyproject.toml  server.js  vercel.json
api/: urls.py  views.py
vivoback/: asgi.py  settings.py  urls.py  wsgi.py
